Add `--adds-opens` JVM args to access `sun.awt` module on MacOS