@@ -196,6 +196,21 @@ tasks {
         }
     }
 
+    withType<JavaExec> {
+        jvmArgs(
+            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+            "--add-opens=java.desktop/sun.awt=ALL-UNNAMED",
+            "--add-opens=java.desktop/sun.java2d=ALL-UNNAMED",
+            "--add-opens=java.desktop/java.awt.peer=ALL-UNNAMED"
+        )
+        if (System.getProperty("os.name").contains("Mac")) {
+            jvmArgs(
+                "--add-opens=java.desktop/sun.lwawt=ALL-UNNAMED",
+                "--add-opens=java.desktop/sun.lwawt.macosx=ALL-UNNAMED"
+            )
+        }
+    }
+
     named<Copy>("processResources") {
         duplicatesStrategy = DuplicatesStrategy.INCLUDE
         mustRunAfter("downloadWebUI")
